--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "faker": "^4.1.0",
     "frisby": "^2.1.2",
     "jest": "^26.4.1",
-    "mongodb": "^3.6.10",
-    "nodemon": "^2.0.4"
+    "mongodb": "^3.6.10"
+  
   },
   "devDependencies": {
     "chai": "^4.3.4",
@@ -38,6 +38,7 @@
     "mocha": "^8.4.0",
     "mongodb-memory-server": "^6.9.6",
     "nyc": "^15.1.0",
-    "sinon": "^11.1.1"
+    "sinon": "^11.1.1",
+    "nodemon": "^2.0.4"
   }
 }
