--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-.trybe.yml
+trybe.yml
 
 # User-specific stuff
 .idea/**/workspace.xml
