--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 trybe.yml
+README_com_wiki.md
 
 # User-specific stuff
 .idea/**/workspace.xml
