--- a/package.json
+++ b/package.json
@@ -30,15 +30,14 @@
     "frisby": "^2.1.2",
     "jest": "^26.4.1",
     "mongodb": "^3.6.10"
-  
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "eslint-config-trybe-backend": "^1.0.3",
     "mocha": "^8.4.0",
     "mongodb-memory-server": "^6.9.6",
+    "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
-    "sinon": "^11.1.1",
-    "nodemon": "^2.0.4"
+    "sinon": "^11.1.1"
   }
 }
