FIX: Add db name in Dockerfile

--- a/Dockerfile.yaml
+++ b/Dockerfile.yaml
@@ -3,7 +3,7 @@ FROM node:lts-buster
 WORKDIR /myapp
 
 ENV PORT 3000
-    DB_URL mongodb://localhost:27017
+    DB_URL mongodb://localhost:27017/StoreManager
 
 COPY . .
 
