--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sd-0x-store-manager",
+  "name": "games-store-back",
   "version": "1.0.0",
   "description": "Simple CRUD to sales and products",
   "main": "index.js",
