--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,12 @@
+
+# Variável definida em arquivo compose ou em outras maneiras de criação de containe , ... 
+# ... terá prioridade em relação a mesma variável ser definida em um dockerfile.
+
 services:
   backend:   
     build: .
     ports:
-      - 3000:3000
+      - 3003:3006            # A porta da direita precisa ser gual a da variável PORT abaixo (linha 17). 
     depends_on:
       - database
     networks:
@@ -10,11 +14,10 @@ services:
     environment:
       - DB_HOST=database
       - DB_NAME=GamesStore  
-      
+      - PORT=3006
   database:
     build: models/
     networks:
       - app-game-2 
-   
 networks:
   app-game-2: 
