--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,7 @@
 
 # Variável definida em arquivo compose ou em outras maneiras de criação de containe , ... 
 # ... terá prioridade em relação a mesma variável ser definida em um dockerfile.
+# Fiz essa "dança de portas" proposital; quis testar diversas combinações possíveis a caráter de estudo e teste.
 
 services:
   backend:   
