--- a/compose.yml
+++ b/compose.yml
@@ -7,14 +7,14 @@ services:
   backend:   
     build: .
     ports:
-      - 3000:3006            # A porta da direita precisa ser gual a da variável PORT abaixo (linha 17).
+      - 3000:3006            # A porta da direita precisa ser igual a da variável PORT abaixo (linha 17).
     depends_on:
       - database
     networks:
       - app-game-2 
     environment:
-      - DB_HOST=database
-      - DB_NAME=GamesStore  
+      - DB_HOST=database     # Se mudar valor dessa variável, tem que mudar o nome do serviço "database" igualmente E VICE-VERSA; remover nem pensar.  
+      - DB_NAME=GamesStore   # Se mudar o valor dessa variável, terá que mudar, tambem, nos Dockerfiles E VICE-VERSA. 
       - PORT=3006
   database:
     build: models/
