--- a/compose-dev-with-front.yml
+++ b/compose-dev-with-front.yml
@@ -9,6 +9,7 @@ services:
     environment:
       - REACT_APP_API_HOST=backend
       - REACT_APP_API_PORT=3001
+      - REACT_APP_WITH_BACK=true 
       - BROWSER=none
     volumes:
       - ../games-store-front/.:/myapp
